<resources>

    <!-- Non Translatable Tags -->
    <string name="app_name" translatable="false">TripSync</string>
    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>

    <!-- Login/Register Tags -->
    <string name="criaruser">Criar Conta</string>
    <string name="logintrue">Login com sucesso!</string>
    <string name="loginfalse">Erro no login!</string>
    <string name="entrar">Entrar</string>
    <string name="networkerror">Erro na conexão:</string>
    <string name="registertrue">Registado com sucesso!</string>
    <string name="registerfalse">Erro ao efetuar o registo!</string>
    <string name="selectFoto">Selecionar Foto</string>

    <!-- User Data Tags -->
    <string name="nome">Nome</string>
    <string name="foto">Fotografia</string>
    <string name="tel">Telemóvel</string>
    <string name="pass">Palavra-Passe</string>
    <string name="edit">Editar Perfil</string>

    <!-- Other Buttons Tags -->
    <string name="começar">Começar</string>
    <string name="guardar">Guardar Alterações</string>
    <string name="search">Procurar</string>
    <string name="voltar">Voltar</string>
    <string name="add">Adicionar</string>
    <string name="continuar">Continuar</string>

    <!-- App Layout Tags -->
    <string name="linguagem">Linguagem</string>
    <string name="pt">Português</string>
    <string name="ing">Inglês</string>
    <string name="primeiro">Olá! Bem-vindo ao TripSync!</string>
    <string name="viagem">As minhas viagens</string>
    <string name="hello">Olá!</string>
    <string name="intro">Partilhe as suas viagens connosco!</string>
    <string name="rec">Recomendado</string>
    <string name="perto">Perto de Si</string>
    <string name="intro2">Adicione e partilhe as suas viagens connosco!</string>
    <string name="intro3">Adicione e partilhe as suas viagens connosco! Pode criar o seu perfil e editar as suas informações sempre que desejado.</string>
    <string name="local">Localização</string>
    <string name="tipo">Tipo</string>
    <string name="definicoes">Definições</string>
    <string name="perfil">Perfil</string>
    <string name="logout">Terminar Sessão</string>
    <string name="addFicheiros">Selecionar ficheiros</string>
    <string name="editFoto">Alterar Foto</string>
    <string name="userExists">Nome de utilizador já existe!</string>
    <string name="errorPhoto">Erro ao carregar fotografia!</string>

    <!-- Trip Layout Tags -->
    <string name="addTrip">Adicionar Viagem</string>
    <string name="titulo">Título</string>
    <string name="desc">Descrição</string>
    <string name="city">Cidade</string>
    <string name="country">País</string>
    <string name="dtinit">Data de Início</string>
    <string name="dtend">Data de Fim</string>
    <string name="cost">Custos Totais</string>
    <string name="classificacao">Classificação</string>
    <string name="editViagem">Editar Viagem</string>
    <string name="visit">Para Visitar</string>
    <string name="criar">Criar</string>
    <string name="selectFotos">Selecionar Fotos</string>
    <string name="atualizar">Atualizar</string>
    <string name="add_image">Adicionar Imagem</string>
    <string name="viagemdetail">A Minha Viagem</string>
    <string name="deleteViagem">Eliminar Viagem</string>
    <string name="confirmDel">Confirmação</string>
    <string name="confirmDelText">Tem a certeza de que deseja excluir esta viagem?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="locais">Locais</string>

    <!-- Error Handling Tags -->
    <string name="errorFoto">Erro ao carregar ficheiros.</string>
    <string name="okFoto">Ficheiro carregados com sucesso.</string>
    <string name="errorLocal">Erro ao carregar local.</string>
    <string name="okLocal">Local carregado com sucesso.</string>
    <string name="errorViagem">Error ao carregar Viagem.</string>
    <string name="errorViagemFields">Preencha todos os campos corretamente.</string>
    <string name="errorViagemFormat">Formato de data inválido.</string>
    <string name="okViagem">Viagem carregada com sucesso.</string>
    <string name="errorUser">Utilizador não autenticado ou ID em falta.</string>
    <string name="localSave">Erro de conexão, dados guardados localmente.</string>
    <string name="cancelPlace">Seleção do local cancelada.</string>


</resources>