<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="3dp"
        android:paddingVertical="60dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/voltar"
            android:src="@drawable/vector__1_"
            android:paddingEnd="30dp"
            android:layout_marginStart="40dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/def"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/linguagem"
            android:textColor="@color/def"
            android:textSize="30sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="155dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/pt"
        android:textColor="@color/def"
        android:textSize="20sp"/>

    <RadioButton
        android:id="@+id/ptRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/pt"
        android:layout_alignTop="@id/pt"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/ing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pt"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/ing"
        android:textColor="@color/def"
        android:textSize="20sp"/>

    <RadioButton
        android:id="@+id/enRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ing"
        android:layout_alignTop="@id/ing"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/btn_guard"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:backgroundTint="@color/def"
        android:text="@string/guardar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ing"
        android:layout_marginTop="40dp"/>

</RelativeLayout>