<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="60dp"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/vector__1_"
            android:paddingRight="35dp"
            android:layout_marginLeft="40dp"
            android:background="@color/white"

            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginLeft="45dp"
            android:textColor="@color/def"
            android:fontFamily="@font/nunito_bold"
            android:textSize="30sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_1"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/nome"
        android:textColor="@color/def"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nome"
        android:background="@drawable/round_edit_text"
        android:paddingVertical="5dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_nome"
        android:layout_marginTop="2dp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/local"
        android:textColor="@color/def"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@+id/tv_local"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/def"/>

    <TextView
        android:id="@+id/tv_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAdd"
        android:layout_marginTop="2dp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/classificacao"
        android:textColor="@color/def"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_class"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_class"
        android:background="@drawable/round_edit_text"
        android:paddingVertical="5dp"
        android:layout_centerHorizontal="true"
        android:radius="10dp"
        />


    <TextView
        android:id="@+id/tv_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_class"
        android:layout_marginTop="2dp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/tipo"
        android:textColor="@color/def"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_tipo"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tipo"
        android:background="@drawable/round_edit_text"
        android:paddingVertical="5dp"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:id="@+id/btnGuarda"
        android:gravity="center"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:backgroundTint="@color/def"
        android:text="@string/guardar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_tipo"
        android:layout_marginTop="70dp"
        />



</RelativeLayout>